RESOLVED FIXED147488
JSXMLHttpRequest::visitAdditionalChildren does not need to explicitly mark m_response
https://bugs.webkit.org/show_bug.cgi?id=147488
Summary JSXMLHttpRequest::visitAdditionalChildren does not need to explicitly mark m_...
youenn fablet
Reported 2015-07-31 05:23:31 PDT
This marking is already done in binding generated code (JSXMLHttpRequest::visitChildren)
Attachments
Patch (1.55 KB, patch)
2015-07-31 05:26 PDT, youenn fablet
no flags
Patch (1.42 KB, patch)
2015-07-31 06:21 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2015-07-31 05:26:49 PDT
youenn fablet
Comment 2 2015-07-31 06:21:49 PDT
Alexey Proskuryakov
Comment 3 2015-07-31 09:12:07 PDT
Is this because it's a CachedAttribute?
youenn fablet
Comment 4 2015-07-31 09:15:20 PDT
(In reply to comment #3) > Is this because it's a CachedAttribute? yes :)
Andreas Kling
Comment 5 2015-07-31 10:34:48 PDT
Comment on attachment 257920 [details] Patch r=me
WebKit Commit Bot
Comment 6 2015-08-03 05:49:03 PDT
Comment on attachment 257920 [details] Patch Clearing flags on attachment: 257920 Committed r187736: <http://trac.webkit.org/changeset/187736>
WebKit Commit Bot
Comment 7 2015-08-03 05:49:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.