JSXMLHttpRequest::visitAdditionalChildren does not need to explicitly mark m_response https://bugs.webkit.org/show_bug.cgi?id=147488

Reviewed by Andreas Kling.

Covered by existing tests.

* bindings/js/JSXMLHttpRequestCustom.cpp:
(WebCore::JSXMLHttpRequest::visitAdditionalChildren): Removed m_response marking.


Canonical link: https://commits.webkit.org/165621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187736 268f45cc-cd09-0410-ab3c-d52691b4dbfc